--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "cSpell.words": [
     "amyrobson",
+    "intractive",
     "juliusomo",
     "maxblagun",
+    "predeploy",
     "ramsesmiron",
     "relpy",
     "webp",
